# curseforge-pack-downloader

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: binaries.yml
src/: client.rs  lib.rs  main.rs  models.rs  url.rs  utils.rs
