[package]
edition = "2018"
name = "curseforge-pack-downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
clap = "2.33.3"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
