[package]
edition = "2018"
name = "curseforge-pack-downloader"
version = "2.0.1"

[dependencies]
bytes = "1.1.0"
clap = "2.33.3"
futures-util = "0.3.14"
indicatif = "0.16.2"
reqwest = {version = "0.11", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.11", features = ["full"]}
